Fixes wrong z-index of navbar in the transects index view.

--- a/src/resources/assets/sass/main.scss
+++ b/src/resources/assets/sass/main.scss
@@ -1,3 +1,7 @@
+.navbar, .messages {
+	z-index: 1;
+}
+
 .transect-container {
 	position: absolute;
 	top: 0;
